--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<java.version>1.7</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<spring-framework.version>4.1.6.RELEASE</spring-framework.version>
+		<spring-framework.version>4.1.7.RELEASE</spring-framework.version>
 	</properties>
 
 	<dependencies>
@@ -18,13 +18,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring-framework.version}</version>
-			<!-- <exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions> -->
-
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -36,5 +29,22 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
